<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plant.newplant.NewPlantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center"
            android:background="#086464"
            android:backgroundTint="#086464">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_tracker"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16sp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/input_type"
                android:layout_width="350sp"
                android:layout_height="48dp"
                android:hint="@string/especieView"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/input_color"
                android:layout_width="350sp"
                android:layout_height="48dp"
                android:hint="@string/colorView"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:id="@+id/add_product"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:text="@string/agregar"
                android:layout_marginTop="16sp"
                android:backgroundTint="#08ac84"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</layout>