<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/plantCard"
        android:layout_width="150sp"
        android:layout_height="80sp"
        app:cardCornerRadius="25sp"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/especie"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/namePlant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/flor"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/color"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/colorPlant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/color_de_flor"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>