<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plant.ViewPlantFragment">
    
    <data>
        <variable
            name="viewmodel"
            type="com.enrique.parcialmoviles.ui.plant.viewmodel.PlantViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center"
            android:background="#086464"
            android:backgroundTint="#086464">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_tracker"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/type_flower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/especieView"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/color_flower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colorView"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>


</layout>
